styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
	padding: 0;
	margin: 0;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
}

a {
	color: inherit;
	text-decoration: none;
}

* {
	box-sizing: border-box;
}

/* Scroll to top style */
.scrollToTop {
	@apply bg-color-gradient-light;
	@apply text-white;
	position: fixed;
	width: 100%;
	align-items: center;
	height: 20px;
	justify-content: center;
	z-index: 999;
	cursor: pointer;
	animation: fadeIn 0.3s;
	transition: opacity 0.4s;
	opacity: 1;
}

.scrollToTop:hover {
	opacity: 1;
}

@keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 0.5;
	}
}

@layer components {
  .home-link {
    @apply flex flex-shrink-0 items-center text-dark-2 dark:text-light-2 bg-light-1 dark:bg-dark-1 ring-1 ring-dark-3 dark:ring-light-3 p-1 ml-0 rounded-xl cursor-pointer;
  }
  /* Primary navigation */
  .nav-primary {
    @apply flex items-center rounded-full text-sm lg:text-lg font-semibold text-dark-2 dark:text-light-2 bg-light-1 dark:bg-dark-1 ring-1 ring-dark-3 dark:ring-light-3 px-3 mx-6;
  }
  .nav-primary .nav-link {
    @apply hover:text-accent-light dark:hover:text-accent-light mx-2 lg:mx-4 py-1 lg:py-2 duration-300;
  }
  /* Secondary navigation */
  .nav-secondary {
    @apply flex text-sm font-semibold text-dark-2 dark:text-light-2 rounded-full px-3 mx-6 bg-light-1 dark:bg-dark-1 ring-1 ring-dark-3 dark:ring-light-3;
  }
  .nav-secondary .nav-link {
    @apply hover:text-accent-light dark:hover:text-accent-light sm:mx-4 sm:py-2 duration-300;
  }
  /* Mobile navigation */
  .nav-mobile {
    @apply block text-lg text-left m-0 mt-3 py-3 justify-between items-center;
  }
  .nav-mobile .nav-link {
    @apply block text-dark-2 dark:text-light-2 hover:text-accent-light dark:hover:text-accent-light py-2 border-t-2 md:border-t-0 border-dark-3 dark:border-light-3;
  }
  /* Text gradient */
  .text-color-gradient-dark {
    @apply text-transparent bg-clip-text bg-gradient-to-r from-blue-700 via-purple-700 to-pink-700;
  }
  .text-color-gradient-light {
    @apply text-transparent bg-clip-text bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500;
  }
  /* Background gradient */
  .bg-color-gradient-dark {
    @apply bg-gradient-to-br from-blue-700 to-purple-700;
  }
  .bg-color-gradient-light {
    @apply bg-gradient-to-br from-blue-500 to-purple-500;
  }
}

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0;
  visibility: hidden;
  transition: all 0.3s;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal-open {
  opacity: 1;
  visibility: visible;
}

.modal:target {
  opacity: 1;
  visibility: visible;
}

.modal-content {
  width: 80%;
  max-width: 800px;
  /* background-color: white; */
  border-radius: 8px;
  padding: 2rem;
  position: relative;
}

.modal-close {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 1.5rem;
  color: black;
  text-decoration: none;
}

.modal-close:hover {
  color: red;
}

